ChangeLog for PyLint
====================
2008-10-13  --  0.15.2
    * fix #5672: W0706 weirdness ( W0706 removed )
    * fix #5998: documentation points to wrong url for mailing list
    * fix #6022: no error message on wrong module names
    * fix #6040: pytest doesn't run test/func_test.py

2008-09-15  --  0.15.1
    * fix #4910: default values are missing in manpage
    * fix #5991: missing files in 0.15.0 tarball
    * fix #5993: epylint should work with python 2.3

2008-09-10  --  0.15.0
    * include pyreverse package and class diagram generation
    * included Stefan Rank's patch to deal with 2.4 relative import
    * included Robert Kirkpatrick's tutorial and typos fixes
    * fix bug in reenabling message
    * fix #2473: invoking pylint on __init__.py (hopefuly)
    * typecheck: acquired-members option has been dropped in favor of the more
      generic generated-members option. If the zope option is set, the behaviour
      is now to add some default values to generated-members.
    * flymake integration: added bin/epylint and elisp/pylint-flymake.el
	
2008-01-14  --  0.14.0
    * fix #3733: Messages (dis)appear depending on order of file names
    * fix #4026: pylint.el should require compile
    * fix a bug in colorized reporter, spotted by Dave Borowitz
    * applied patch from Stefan Rank to avoid W0410 false positive when
      multiple "from __future__" import statements
    * implement #4012: flag back tick as deprecated (new W0333 message)
    * new ignored-class option on typecheck checker allowing to skip members
      checking based on class name (patch provided by Thomas W Barr)

	
2007-06-07  --  0.13.2
    * fix disable-checker option so that it won't accidentally enable the
      rpython checker which is disabled by default
    * added note about the gedit plugin into documentation
	
2007-03-02  --  0.13.1
    * fix some unexplained 0.13.0 packaging issue which led to a bunch of
      files missing from the distribution
	